# task-manager

./: CMakeLists.txt  LICENSE  README.md
src/: IStorage.h  JsonStorage.cpp  JsonStorage.h  Storage.cpp  Storage.h  Task.h  TaskManager.cpp  TaskManager.h  UI.cpp  UI.h  main.cpp
